# django-rest-api-2

./: pyproject.toml  pytest.ini
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/tests/: order_tests.py  test_order_model.py  test_order_serializer.py  test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py
product/tests/: category_tests.py  product_tests.py  test_category_model.py  test_category_serializer.py  test_category_viewset.py  test_product_model.py  test_product_serializer.py  test_product_viewset.py
