[project]
name = "django-rest-api"
version = "0.1.0"
description = ""
authors = [
    {name = "SJeanF",email = "fonsecasantosjean@gmail.com"}
]
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
